--- a/checkout.html
+++ b/checkout.html
@@ -7,47 +7,60 @@
     <title>Rogers Best Burgers | Downtown</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <table>
-        <tr>
-            <td>
-                <a name="top"></a>
-                <img class="logo" src="./images/logo.png" alt="Logo">&nbsp;
+    <div class="animate__animated animate__lightSpeedInLeft">
+        <div class="row justify-content-start">
+            <div class="col">
+                <img class="logo" src="./images/logo.png" alt="Logo">
                 <h1 class="header">Welcome to the Rogers Best Burgers</h1>
-            </td>
-        </tr>
-    </table>
+                <a name="top"></a>
+            </div>
+        </div>
+    </div>
     <ul class="menu">
         <li class="menu"><a href="index.html">Home</a></li>
         <li class="menu"><a href="product.html">Product</a></li>
         <li class="menu"><a href="shopping_cart.html">Shopping Cart</a></li>
         <li class="menu"><a href="contact.html">Contact Us</a></li>
     </ul>
-    <div class="_content_1oahw6">
-        <h2 class="center">Checkout</h2>
-        <div class="display_blocks">
-            <h3>Ordering From</h3>
-            Rogers Best Burgers<br/> 115 W Walnut Street
-            <br/> Rogers, AR 72756<br/>
+    <br>
+    <div class="containers">
+        <div class="row justify-content-center">
+            <div class="col-sm-6 col-md-4 ">
+                <h2 class="center">Checkout</h2>
+                <br>
+                <div class="display_blocks">
+                    <h3>Ordering From</h3>
+                    Rogers Best Burgers<br/> 115 W Walnut Street
+                    <br/> Rogers, AR 72756<br/>
+                </div>
+                <br>
+                <div class="display_blocks">
+                    <h3>Order Type</h3>
+                    Type: Pick Up<br/>When: Today at 11:30AM<br/>
+                </div>
+                <br>
+                <div class="display_blocks">
+                    <h3>Contact Information</h3>
+                    Stacey Smith<br/> Email: StaceySmith@customer.com<br/> (479) 555-3232<br/>
+                </div>
+                <br>
+                <div class="display_blocks">
+                    <h3>Order Summary</h3> 2 Fries x $5.00
+                    <br/>
+                </div>
+                <br>
+                <div class="display_blocks">
+                    Subtotal: $10.00<br/> Taxes: $1.00
+                    <br/> Total Price: $11.00<br/><br> <a href="" class="btn btn-primary">Pay Now</a><br/>
+                </div>
+            </div>
         </div>
-        <div class="display_blocks">
-            <h3>Order Type</h3>
-            Type: Pick Up<br/>When: Today at 11:30AM<br/>
-        </div>
-        <div class="display_blocks">
-            <h3>Contact Information</h3>
-            Stacey Smith<br/> Email: StaceySmith@customer.com<br/> (479) 555-3232<br/>
-        </div>
-        <div class="display_blocks">
-            <h3>Order Summary</h3> 2 Fries x $5.00
-            <br/>
-        </div>
-        <div class="display_blocks">
-            Subtotal: $5.00<br/> Taxes: $1.00
-            <br/> Total Price: $11.00<br/> <a href="" class="call-to-action">Pay Now</a><br/>
-        </div>
+
     </div>
 </body>
