--- a/contact.html
+++ b/contact.html
@@ -2,53 +2,99 @@
 
 <head>
     <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Home | Downtown" />
-	<title>Rogers Best Burgers | Downtown</title>
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Home | Downtown" />
+    <title>Rogers Best Burgers | Downtown</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <table>
-		<tr>
-			<td>
-				<img class="logo" src="./images/logo.png" alt="Logo">&nbsp;
-				<h1 class="header">Welcome to the Rogers Best Burgers</h1>
-			</td>
-		</tr>
-	</table>
-	<ul class="menu">
+    <div class="animate__animated animate__lightSpeedInLeft">
+        <div class="row justify-content-start">
+            <div class="col">
+                <img class="logo" src="./images/logo.png" alt="Logo">
+                <h1 class="header">Welcome to the Rogers Best Burgers</h1>
+                <a name="top"></a>
+            </div>
+        </div>
+    </div>
+    <ul class="menu">
         <li class="menu"><a href="index.html">Home</a></li>
         <li class="menu"><a href="product.html">Product</a></li>
         <li class="menu"><a href="shopping_cart.html">Shopping Cart</a></li>
         <li class="menu"><a href="contact.html">Contact Us</a></li>
     </ul>
-    <br><br>
-    <form method="POST" action="https://webhook.site/a79b8a0a-67e4-40ce-9d37-2e05020d0998">
-        <label for="firstName">First Name:</label>
-        <input type="text" name="firstName" id="firstName" placeholder="ex: John" required>
-        <br>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 offset-md-3">
 
-        <label for="lastName">Last Name:</label>
-        <input type="text" name="lastName" id="lastName" placeholder="ex: Doe" required>
-        <br>
+                <br>
+                <h2>Contact Us</h2>
 
-        <label for="emailAddress">Email Address:</label>
-        <input type="email" name="emailAddress" id="emailAddress" placeholder="ex: JohnDoe@email.com" required>
-        <br>
+            </div>
+        </div>
 
-        <label for="phoneNumber">Phone Number:</label>
-        <input type="tel" name="phoneNumber" id="phoneNumber" placeholder="ex: 555-479-3555" required>
-        <br>
+        <form method="POST" action="https://webhook.site/a79b8a0a-67e4-40ce-9d37-2e05020d0998">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 offset-md-3">
+                    <div class="form-group">
+                        <label for="firstName">First Name:</label>
+                        <input type="text" class="form-control" name="firstName" id="firstName" placeholder="ex: John" required>
+                    </div>
 
-        <label for="message">Comments:</label>
-        <textarea name="message" id="message" rows="4" cols="50" placeholder="How may we help you?"></textarea>
-        <br>
+                </div>
 
-        <button>Submit</button>
-    </form>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 offset-md-3">
+                    <div class="form-group">
+                        <label for="lastName">Last Name:</label>
+                        <input type="text" name="lastName" class="form-control" id="lastName" placeholder="ex: Doe" required>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 offset-md-3">
+                    <div class="form-group">
+                        <label for="emailAddress">Email Address:</label>
+                        <input type="email" name="emailAddress" class="form-control" id="emailAddress" placeholder="ex: JohnDoe@email.com" required>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 offset-md-3">
+                    <div class="form-group">
+                        <label for="phoneNumber">Phone Number:</label>
+                        <input type="tel" name="phoneNumber" class="form-control" id="phoneNumber" placeholder="ex: 555-479-3555" required>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 offset-md-3">
+                    <div class="form-group">
+                        <label for="message">Comments:</label>
+                        <textarea name="message" id="message" class="form-control" rows="4" placeholder="How may we help you?"></textarea>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 offset-md-3">
+                    <div class="form-group">
+                        <button class="btn btn-primary">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 
 </body>
 <br><br>
