--- a/index.html
+++ b/index.html
@@ -1,179 +1,230 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Home | Downtown" />
-	<title>Rogers Best Burgers | Downtown</title>
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Home | Downtown" />
+    <title>Rogers Best Burgers | Downtown</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<table>
-		<tr>
-			<td>
-				<a name="top"></a>
-				<img class="logo" src="./images/logo.png" alt="Logo">&nbsp;
-				<h1 class="header">Welcome to the Rogers Best Burgers</h1>
-			</td>
-		</tr>
-	</table>
-	<ul class="menu">
-		<li class="menu"><a href="index.html">Home</a></li>
-		<li class="menu"><a href="#beverage">Beverages</a></li>
-		<li class="menu"><a href="#appetizer">Appetizers</a></li>
-		<li class="menu"><a href="#burger">Burgers</a></li>
-		<li class="menu"><a href="product.html">Product</a></li>
+    <div class="animate__animated animate__lightSpeedInLeft">
+        <div class="row justify-content-start">
+            <div class="col">
+                <img class="logo" src="./images/logo.png" alt="Logo">
+                <h1 class="header">Welcome to the Rogers Best Burgers</h1>
+                <a name="top"></a>
+            </div>
+        </div>
+    </div>
+    <ul class="menu">
+        <li class="menu"><a href="index.html">Home</a></li>
+        <li class="menu"><a href="#beverage">Beverages</a></li>
+        <li class="menu"><a href="#appetizer">Appetizers</a></li>
+        <li class="menu"><a href="#burger">Burgers</a></li>
+        <li class="menu"><a href="product.html">Product</a></li>
         <li class="menu"><a href="shopping_cart.html">Shopping Cart</a></li>
         <li class="menu"><a href="contact.html">Contact Us</a></li>
-	</ul>
+    </ul>
 
-	<h1>About Us</h1><a class="top" href="#top">Back to top of page</a><br><br>
-	<table>
-		<tr>
-			<td>
-				<p class="header">Rogers Best Burgers believes in farm to table products. We believe in giving people the experience of
-					how things use to be. It is an experience like no others. Where you get highly styled photos of
-					products from our competitors, we believe in giving you raw ingredients the honest truth. No
-					filters. No BS. Just an experience that your great great great grandfather had to deal with as a
-					pioneer. </p>
-			</td>
-		</tr>
-	</table>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <br>
+                <h1>About Us</h1><a class="top" href="#top">Back to top of page</a><br><br>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-8">
+                <p>Rogers Best Burgers believes in farm to table products. We believe in giving people the experience of how things use to be. It is an experience like no others. Where you get highly styled photos of products from our competitors, we believe
+                    in giving you raw ingredients the honest truth. No filters. No BS. Just an experience that your great great great grandfather had to deal with as a pioneer. </p>
+            </div>
+            <div class="col-sm-12 col-md-4">&nbsp;</div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+                <!-- Beverages -->
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h1><a name="beverage">Beverages</a></h1>
+                <a class="top" href="#top">Back to top of page</a><br><br>
+                <h2>For you</h2>
+            </div>
+        </div>
+        <div class="row row-cols-sm-1 row-cols-md-2">
+            <div class="col-sm-12 col-md-4 col-lg-3">
+                <h3>Shakes</h3>
+                <img src="./images/beverage/shake.jpg" alt="Shakes">
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <p class="description"> This milk shake is made with MILK, not ice cream! It's refreshing and healthy!
+                </p>
+                <a href="product.html" class="btn btn-primary">Product Page</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row row-cols-sm-1 row-cols-md-2">
+            <div class="col-sm-12 col-md-4 col-lg-3">
+                <h3>Hot Chocolate</h3>
+                <img src="./images/beverage/hot_chocolate.jpg" alt="Hot Chocolate">
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <p class="description">Hot chocolate, also known as drinking chocolate, cocoa, and as chocolate tea in Nigeria, is a heated drink consisting of shaved chocolate, melted chocolate or cocoa powder, heated milk or water, and usually a sweetener. Hot chocolate may
+                    be topped with whipped cream or marshmallows.</p>
 
-	<h1><a name="beverage">Beverages</a></h1>
-	<a class="top" href="#top">Back to top of page</a><br><br>
-	<h2>For you</h2>
-	<table>
-		<tr>
-			<td>
-				<h3>Shakes</h3>
-				<img src="./images/beverage/shake.jpg" alt="Shakes">
-			</td>
-			<td>
-				<p class="description">This milk shake is made with MILK, not ice cream! It's refreshing and healthy!
-				</p>
+                <a href="product.html" class="btn btn-primary">Product Page</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row row-cols-sm-1 row-cols-md-2">
+            <div class="col-sm-12 col-md-4 col-lg-3">
+                <h3>Smoothie</h3>
+                <img src="./images/beverage/smoothie.jpg" alt="Smoothie">
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <p class="description">Spinach, kale, mango, pineapple, banana & fresh ginger (naturally sweetened)</p>
+                <a href="product.html" class="btn btn-primary">Product Page</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+                <!-- Appetizers -->
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h1><a name="appetizer">Appetizers</a></h1>
+                <a class="top" href="#top">Back to top of page</a><br><br>
+            </div>
+        </div>
+        <div class="row row-cols-sm-1 row-cols-md-2">
+            <div class="col-sm-12 col-md-4 col-lg-3">
+                <h3>Bourgeois</h3>
+                <img src="./images/appetizer/bourgeois.jpg" alt="Bourgeois">
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <p class="description">Idaho Russet homestyle fries flash fried in duck fat, garnished with Italian black truffle salt.</p>
+                <a href="product.html" class="btn btn-primary">Product Page</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row row-cols-sm-1 row-cols-md-2">
+            <div class="col-sm-12 col-md-4 col-lg-3">
+                <h3>Roasted Brussels Sprouts</h3>
+                <img src="./images/appetizer/brussels.jpg" alt="Roasted Brussels Sprouts">
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <p class="description">Fresh sprouts, fried, lightly salted and served with a side of house-made maple bacon jam.</p>
+                <a href="product.html" class="btn btn-primary">Product Page</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row row-cols-sm-1 row-cols-md-2">
+            <div class="col-sm-12 col-md-4 col-lg-3">
+                <h3>Fries</h3>
+                <img src="./images/appetizer/fries.jpg" alt="Fries">
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <p class="description">All fries are cooked in Non GMO Sunflower oil. Depending on the day, your fries will be cut regular, homestyle, curly, po-ball, or shoestring. Our fries are served au natural and therefore do not keep their heat, or crispness as long as
+                    the typical fry. For best quality, please arrive as close as possible to your pick up time. Currently State Street out of Yams 4-1-20.</p>
+                <a href="product.html" class="btn btn-primary">Product Page</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+                <!-- Burgers -->
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h1><a name="burger">Burgers</a></h1>
+                <a class="top" href="#top">Back to top of page</a><br><br>
+            </div>
+        </div>
+        <div class="row row-cols-sm-1 row-cols-md-2">
+            <div class="col-sm-12 col-md-4 col-lg-3">
+                <h3>BFC Original</h3>
+                <img src="./images/burger/bfc_original.jpg" alt="BFC Original">
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <p class="description">Spring mix, house-made garlic aioli, red onion gastrique, tomato.</p>
+                <a href="product.html" class="btn btn-primary">Product Page</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row row-cols-sm-1 row-cols-md-2">
+            <div class="col-sm-12 col-md-4 col-lg-3">
+                <h3>Classic</h3>
+                <img src="./images/burger/classic.jpg" alt="Classic">
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <p class="description">Crisp lettuce, tomato, red onion, house-made pickles and smoked special sauce.</p>
+                <a href="product.html" class="btn btn-primary">Product Page</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row row-cols-sm-1 row-cols-md-2">
+            <div class="col-sm-12 col-md-4 col-lg-3">
+                <h3>The BBQ</h3>
+                <img src="./images/burger/the_bbq.jpg" alt="The BBQ">
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9">
+                <p class="description">Blue cheese coleslaw, house made chips, barbecue sauce</p>
+                <a href="product.html" class="btn btn-primary">Product Page</a>
+            </div>
+        </div>
+    </div>
 
-				<a href="product.html" class="call-to-action">Product Page</a>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">&nbsp;</td>
-		</tr>
-		<tr>
-			<td>
-				<h3>Hot Chocolate</h3>
-				<img src="./images/beverage/hot_chocolate.jpg" alt="Hot Chocolate">
-			</td>
-			<td>
-				<p class="description">Hot chocolate, also known as drinking chocolate, cocoa, and as chocolate tea in Nigeria, is a heated drink consisting of shaved chocolate, melted chocolate or cocoa powder, heated milk or water, and usually a sweetener. Hot chocolate may be topped with whipped cream or marshmallows.</p>
 
-				<a href="product.html" class="call-to-action">Product Page</a>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">&nbsp;</td>
-		</tr>
-		<tr>
-			<td>
-				<h3>Smoothie</h3>
-				<img src="./images/beverage/smoothie.jpg" alt="Smoothie">
-			</td>
-			<td>
-				<p class="description">Spinach, kale, mango, pineapple, banana & fresh ginger (naturally sweetened)</p>
-
-				<a href="product.html" class="call-to-action">Product Page</a>
-			</td>
-		</tr>
-	</table>
-
-	<h1><a name="appetizer">Appetizers</a></h1>
-	<a class="top" href="#top">Back to top of page</a><br><br>
-	<table>
-		<tr>
-			<td>
-				<h3>Bourgeois</h3>
-				<img src="./images/appetizer/bourgeois.jpg" alt="Bourgeois">
-			</td>
-			<td>
-				<p class="description">Idaho Russet homestyle fries flash fried in duck fat, garnished with Italian black truffle salt.</p>
-
-				<a href="product.html" class="call-to-action">Product Page</a>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">&nbsp;</td>
-		</tr>
-		<tr>
-			<td>
-				<h3>Roasted Brussels Sprouts</h3>
-				<img src="./images/appetizer/brussels.jpg" alt="Roasted Brussels Sprouts">
-			</td>
-			<td>
-				<p class="description">Fresh sprouts, fried, lightly salted and served with a side of house-made maple bacon jam.</p>
-
-				<a href="product.html" class="call-to-action">Product Page</a>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">&nbsp;</td>
-		</tr>
-		<tr>
-			<td>
-				<h3>Fries</h3>
-				<img src="./images/appetizer/fries.jpg" alt="Fries">
-			</td>
-			<td>
-				<p class="description">All fries are cooked in Non GMO Sunflower oil. Depending on the day, your fries will be cut regular, homestyle, curly, po-ball, or shoestring. Our fries are served au natural and therefore do not keep their heat, or crispness as long as the typical fry. For best quality, please arrive as close as possible to your pick up time. Currently State Street out of Yams 4-1-20.</p>
-
-				<a href="product.html" class="call-to-action">Product Page</a>
-			</td>
-		</tr>
-	</table>
-
-	<h1><a name="burger">Burgers</a></h1>
-	<a class="top" href="#top">Back to top of page</a><br><br>
-	<table>
-		<tr>
-			<td>
-				<h3>BFC Original</h3>
-				<img src="./images/burger/bfc_original.jpg" alt="BFC Original">
-			</td>
-			<td>
-				<p class="description">Spring mix, house-made garlic aioli, red onion gastrique, tomato.</p>
-				<a href="product.html" class="call-to-action">Product Page</a>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">&nbsp;</td>
-		</tr>
-		<tr>
-			<td>
-				<h3>Classic</h3>
-				<img src="./images/burger/classic.jpg" alt="Classic">
-			</td>
-			<td>
-				<p class="description">Crisp lettuce, tomato, red onion, house-made pickles and smoked special sauce.</p>
-				<a href="product.html" class="call-to-action">Product Page</a>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">&nbsp;</td>
-		</tr>
-		<tr>
-			<td>
-				<h3>The BBQ</h3>
-				<img src="./images/burger/the_bbq.jpg" alt="The BBQ">
-			</td>
-			<td>
-				<p class="description">Blue cheese coleslaw, house made chips, barbecue sauce</p>
-				<a href="product.html" class="call-to-action">Product Page</a>
-			</td>
-		</tr>
-	</table>
-	
 </body>
 <br><br>
 <footer> <small>&copy; Copyright 2020, Kohltfarber Corporation</small> </footer>
