--- a/product.html
+++ b/product.html
@@ -7,46 +7,63 @@
     <title>Rogers Best Burgers | Downtown</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <table>
-        <tr>
-            <td>
-                <a name="top"></a>
-                <img class="logo" src="./images/logo.png" alt="Logo">&nbsp;
+    <div class="animate__animated animate__lightSpeedInLeft">
+        <div class="row justify-content-start">
+            <div class="col">
+                <img class="logo" src="./images/logo.png" alt="Logo">
                 <h1 class="header">Welcome to the Rogers Best Burgers</h1>
-            </td>
-        </tr>
-    </table>
+                <a name="top"></a>
+            </div>
+        </div>
+    </div>
     <ul class="menu">
         <li class="menu"><a href="index.html">Home</a></li>
         <li class="menu"><a href="product.html">Product</a></li>
         <li class="menu"><a href="shopping_cart.html">Shopping Cart</a></li>
         <li class="menu"><a href="contact.html">Contact Us</a></li>
     </ul>
-    <div class="col50 divider">
-        <img src="./images/appetizer/fries.jpg" alt="Fries" class="hero">
-        <br>
-        <ul class="thumbnail">
-            <li claas="thumbnail"><img src="./images/appetizer/fries.jpg" alt="Fries" class="thumbnail"></li>
-            <li claas="thumbnail"><img src="./images/appetizer/fries.jpg" alt="Fries" class="thumbnail"></li>
-            <li claas="thumbnail"><img src="./images/appetizer/fries.jpg" alt="Fries" class="thumbnail"></li>
-            <li claas="thumbnail"><img src="./images/appetizer/fries.jpg" alt="Fries" class="thumbnail"></li>
-            <li claas="thumbnail"><img src="./images/appetizer/fries.jpg" alt="Fries" class="thumbnail"></li>
-        </ul>
-    </div><!--
-    --><div class="col50">
-        <h2>Fries</h2>
-        <br/> 189 rating
-        <br/> $5.00
-        <br/> Medium
-        <br/>
-        <p class="description">All fries are cooked in Non GMO Sunflower oil. Depending on the day, your fries will be cut regular, homestyle, curly, po-ball, or shoestring. Our fries are served au natural and therefore do not keep their heat, or crispness as long as the typical
-            fry. For best quality, please arrive as close as possible to your pick up time. Currently State Street out of Yams 4-1-20.</p>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h2>Product Page</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8">
+                <img src="./images/appetizer/fries.jpg" alt="Fries" class="hero">
+                <br><br>
+                <div class="row">
+                    <div class="col-2 offset-1"><img src="./images/appetizer/fries.jpg" alt="Fries" class="img-thumbnail"></div>
+                    <div class="col-2"><img src="./images/appetizer/fries.jpg" alt="Fries" class="img-thumbnail"></div>
+                    <div class="col-2"><img src="./images/appetizer/fries.jpg" alt="Fries" class="img-thumbnail"></div>
+                    <div class="col-2"><img src="./images/appetizer/fries.jpg" alt="Fries" class="img-thumbnail"></div>
+                    <div class="col-2"><img src="./images/appetizer/fries.jpg" alt="Fries" class="img-thumbnail"></div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <h2>Fries</h2>
+                <br/> 189 rating
+                <br/> $5.00
+                <br/> Medium
+                <br/>
+                <p class="description">All fries are cooked in Non GMO Sunflower oil. Depending on the day, your fries will be cut regular, homestyle, curly, po-ball, or shoestring. Our fries are served au natural and therefore do not keep their heat, or crispness as long as
+                    the typical fry. For best quality, please arrive as close as possible to your pick up time. Currently State Street out of Yams 4-1-20.</p>
 
-        <br/>
-        <a href="shopping_cart.html" class="call-to-action">Add to Cart</a>
+                <br/>
+                <a href="shopping_cart.html" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>
     </div>
 </body>
