--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -7,61 +7,75 @@
     <title>Rogers Best Burgers | Downtown</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Pangolin&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <table>
-        <tr>
-            <td>
-                <a name="top"></a>
-                <img class="logo" src="./images/logo.png" alt="Logo">&nbsp;
+    <div class="animate__animated animate__lightSpeedInLeft">
+        <div class="row justify-content-start">
+            <div class="col">
+                <img class="logo" src="./images/logo.png" alt="Logo">
                 <h1 class="header">Welcome to the Rogers Best Burgers</h1>
-            </td>
-        </tr>
-    </table>
+                <a name="top"></a>
+            </div>
+        </div>
+    </div>
     <ul class="menu">
         <li class="menu"><a href="index.html">Home</a></li>
         <li class="menu"><a href="product.html">Product</a></li>
         <li class="menu"><a href="shopping_cart.html">Shopping Cart</a></li>
         <li class="menu"><a href="contact.html">Contact Us</a></li>
     </ul>
-    <div class="col70">
-        <h2>Shopping Cart</h2>
-        <table class="cart">
-            <thead class="cart">
-                <tr>
-                    <th>Product Details</th>
-                    <th>Quantity</th>
-                    <th>Price</th>
-                    <th>Total</th>
-                </tr>
-            </thead>
-            <tbody class="cart">
-                <tr>
-                    <td>
-                        <h4>Fries</h4>
-                        <img src="./images/appetizer/fries.jpg" alt="Fries">
-                    </td>
-                    <td>2</td>
-                    <td>$5.00</td>
-                    <td>$10.00</td>
-                </tr>
-            </tbody>
-        </table>
-    </div><!--
-    --><div class="col30">
-        <div class="order-summary">
-            <h3>ORDER SUMMARY</h3>
-            <ul class="subtotal">
-                <li>Sub-Total: $10.00</li>
-                <li>Tax: $1.00</li>
-                <li>Grand Total: $11.00</li>
-            </ul>
-            <br> <a href="checkout.html" class="call-to-action">Checkout</a>
-            <br><br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h2>Shopping Cart</h2>
+            </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col-sm-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-lg-6">
+                <table class="cart">
+                    <thead class="cart">
+                        <tr>
+                            <th>Product Details</th>
+                            <th>Quantity</th>
+                            <th>Price</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody class="cart">
+                        <tr>
+                            <td>
+                                <h4>Fries</h4>
+                                <img src="./images/appetizer/fries.jpg" alt="Fries">
+                            </td>
+                            <td>2</td>
+                            <td>$5.00</td>
+                            <td>$10.00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col col-lg-6">
+                <div class="order-summary">
+                    <h3>ORDER SUMMARY</h3>
+                    <ul class="subtotal">
+                        <li>Sub-Total: $10.00</li>
+                        <li>Tax: $1.00</li>
+                        <li>Grand Total: $11.00</li>
+                    </ul>
+                    <br> <a href="checkout.html" class="btn btn-primary">Checkout</a>
+                    <br><br>
+                </div>
+            </div>
+        </div>
 </body>
 <br><br>
 <footer> <small>&copy; Copyright 2020, Kohltfarber Corporation</small> </footer>
